--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,4 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        
+      - run: |
+          apt-get update && apt-get install ruby-full
