--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          apt-get update && apt-get install ruby-full
+          sudo apt-get update && sudo apt-get install ruby-full
