--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           sudo apt-get update && sudo apt-get install ruby-full
+          gem install jekyll bundler
