--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,4 +13,4 @@ jobs:
       - run: |
           sudo apt-get update && sudo apt-get install ruby-full
           sudo gem install jekyll bundler
-          jekyll build
+          sudo jekyll build
