DEBUG Trying to get Ruby to stop moaning

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,4 +13,5 @@ jobs:
       - run: |
           sudo apt-get update && sudo apt-get install ruby-full
           sudo gem install jekyll bundler
+          sudo gem install rexml
           sudo jekyll build
