--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           sudo apt-get update && sudo apt-get install ruby-full
-          sudo gem install jekyll bundler
-          sudo gem install rexml
+          sudo gem install bundler
+          sudo bundle install
           sudo jekyll build
