--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,6 +19,5 @@ jobs:
       - uses:  helaili/jekyll-action@v2
         with:
           build_only: true
-      - uses: montudor/action-zip@v1
-        with:
-          args: zip -r site.zip /github/jekyll_build
+      - run: ls -a
+        
