--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,9 +16,9 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses:  helaili/jekyll-action@v2
+      - uses: helaili/jekyll-action@v2
         with:
           build_only: true
-          target_path: _site
+          target_path: /_site
       - run: ls -a /github
         
