--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,4 +16,10 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: victoriadrake/jekyll-cd@master
+      - uses: helaili/jekyll-action@v2
+        with:
+          build_only: true
+          keep_history: true
+          target_path: /
+      - run: ls -a ../
+        
