WIP Setting up credentials file

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,3 +37,16 @@ jobs:
           name: site-build
           path: site.zip
           retention-days: 5
+    
+      - name: Setup Credentials File
+        id: setup_credentials_file
+        uses: timheuer/base64-to-file@v1.1
+        with:
+          fileName: 'creds.json'
+          encodedString: ${{ secrets.GCP_DEPLOYMENT }}
+
+
+      - name: 'GCP SDK Auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: ${{ steps.setup_credentials_file.outputs.filePath }}
