--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   What's going on, opinions and all that stuff
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ""
+url: "http://rexchoppers.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: rexchoppers
 
 # Build settings
