--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://rexchoppers.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: rexchoppers
+permalink: /:year/:month/:day/:title/
 
 # Build settings
 theme: minima
